Fix horizontal scroll caused by btn-back width

--- a/_sass/_customize.scss
+++ b/_sass/_customize.scss
@@ -350,7 +350,7 @@ small {
 }
 
 .btn-back {
-  width: $text-width;
+  width: 100%;;
   margin: auto;
 }
 
